--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,6 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file></welcome-file>
+        <welcome-file>signIn.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
